
2006-09-19  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, doc/xvidcap-manual/C: xvidcap-manual.xml, 
	  xvidcap-manual-C.omf:
		various modifications to make docbooks work and register
		with scrollkeeper
	* xvidcap.png, xvidcap.desktop, Makefile.am, 
	  debian: xvidcap.menu, postinst, postrm: various
		updates to create menu entries

2006-09-17  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/*: initial import of xvidcap online docs

2006-09-11  Vincenzo Reale <smart2128@baslug.org>
	* po/it.po: added Italian translation

2006-09-11  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome-xvidcap.glade: made main control not resizable
	* src/main.c: fixed segfault with --sync command line arg
	* po/de.po: fixed some translations

2006-09-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in: fixed libXmu detection in X11R6 paths,
		including setting runtime search path
	* ffmpeg-svn19513/libavformat/movenc.c, src/xtoffmpeg.c:
		fixed root cause for segfault in movenc.c and
		revert to original

2006-09-07  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome_ui.c: removed unconditional debug output
	* src/codecs.c: fixed bug in the definition of the flv format
	* src/xtoffmpeg.c: added check for file_oformat != NULL, and 
		did some optimization to get rid of the "clipping
		dct coefficient message" (use trellis quant, mbd=2,
		no obmc, fast ffmpeg operation)
	* ffmpeg-svn19513/libavformat/movenc.c: fixed NULL pointer,
		need to watch this gets fixed upstream
	* src: gnome_ui.c, gnome-xvidcap.glade: added width and height
		to the results dialog
	
2006-09-06  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: control.h, gnome_ui.c, main.c: wake up sleeping capture
		thread when hitting stop
	* src: app_data.c, app_data.h, gnome_ui.c, gnome_options.c: fix
		command execution (animate etc.) to handle floating point
		values for time_pre_frame, needed for fps < 1
	* src/xtoffmpeg.c: fixed buffer underflows with m2v format
